--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   function copyTextToClipboardFrom (selector) {
     const text = document.querySelector(selector).innerText
     navigator.clipboard.writeText(text)
-    alert('Kopyalandi: ' + text)
+    alert('Kopyalandı: ' + text)
   }
 </script>
 </body>
