--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Emre Pişkin">
     <title>Hoop — Emre Pişkin</title>
 
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
